@@ -147,3 +147,22 @@ class TimeFrameCalculator(object):
 
         return (hours * 3600) + (minutes * 60) + seconds \
                + (milliseconds / 1000)
+
+
+if __name__ == '__main__':
+
+    calc = TimeFrameCalculator(0)
+    calc = TimeFrameCalculator()
+    calc.set_framerate(0)
+
+    times = '00:00:00,100', '33:33:00,000'
+    assert calc.add_times(*times)               == '33:33:00,100'
+    assert calc.frame_to_seconds(400)           == 400 / 23.976
+    assert calc.frame_to_time(400)              == '00:00:16,683'
+    assert calc.get_frame_duration(5, 8)        == 3
+    assert calc.get_time_duration(*times)       == '33:32:59,900'
+    assert calc.round_time('02:33:44,666', 1)   == '02:33:44,700'
+    assert calc.seconds_to_frame(500)           == 11988
+    assert calc.seconds_to_time(877.999)        == '00:14:37,999'
+    assert calc.time_to_frame('00:00:33,333')   == 799
+    assert calc.time_to_seconds('00:33:33,333') == 2013.333
